--- a/index.htm
+++ b/index.htm
@@ -4,4 +4,8 @@
   <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">Dumbass this is the way to the homepage.</a>
 <br></br>
 <center>
-<h1>
+<h1>Welcome to my photos page.</h1>
+  <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
+<p>This is the page where I host the photos I have taken of outside, they are cool.</p>
+<br></br>
+  
