--- a/index.htm
+++ b/index.htm
@@ -8,4 +8,7 @@
   <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
-  
+  <h2>Tree Photos</h2>
+  <p>Some photos that I got of trees.</p>
+  <h4>Tree 1</h4>
+  <img src="Tree-1-min.JPG" alt="greentree">
