--- a/index.htm
+++ b/index.htm
@@ -11,4 +11,9 @@
   <h2>Tree Photos</h2>
   <p>Some photos that I got of trees.</p>
   <h4>Tree 1</h4>
-  <img src="Tree-1-min.JPG" alt="greentree">
+  <p>This is a tree from my backyard.</p>
+  <img src="Tree-1-min.JPG" alt="green tree">
+  <br></br>
+  <h4>Tree 2</h4>
+  <p>Yet another tree from my backyard.</p>
+  <img src="Tree-2-min.JPG" alt="green tree2">
