--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,8 @@
   <p>Some photos that I got of trees.</p>
   <h4>Tree 1</h4>
   <p>This is a tree from my backyard.</p>
-  <img src="Tree-1-min.JPG" alt="green tree">
+  <img src="Tree-1-min.JPG" alt="green tree" width="800" height="600">
   <br></br>
   <h4>Tree 2</h4>
   <p>Yet another tree from my backyard.</p>
-  <img src="Tree-2-min.JPG" alt="green tree2">
+  <img src="Tree-2-min.JPG" alt="green tree2" width="800" height="600">
