--- a/index.htm
+++ b/index.htm
@@ -17,3 +17,7 @@
   <h4>Tree 2</h4>
   <p>Yet another tree from my backyard.</p>
   <img src="Tree-2-min.JPG" alt="green tree2" width="800" height="600">
+  <br></br>
+  <h4>Tree 3</h4>
+<p>Yet ANOTHER tree from my backyard.</p>
+<img src="Tree-3-min.JPG" alt="green tree3" width="800" height="600">
