--- a/index.htm
+++ b/index.htm
@@ -21,3 +21,7 @@
   <h4>Tree 3</h4>
 <p>Yet ANOTHER tree from my backyard.</p>
 <img src="Tree-3-min.JPG" alt="green tree3" width="800" height="600">
+  <br></br>
+  <h4>Tree 4</h4>
+<p>Hey did you know all these pictures are the same two trees? And this is another one of those trees.</p>
+<img src="Tree-4-min.JPG" alt="green tree4" width="800" height="600">
