--- a/index.htm
+++ b/index.htm
@@ -9,19 +9,23 @@
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
   <h2>Tree Photos</h2>
+  <a href="Tree1">Go to tree 1</a>
+  <a href="Tree2">Go to tree 2</a>
+  <a href="Tree3">Go to tree 3</a>
+  <a href="Tree4">Go to tree 4</a>
   <p>Some photos that I got of trees.</p>
-  <h4>Tree 1</h4>
+  <h4 id="Tree1">Tree 1</h4>
   <p>This is a tree from my backyard.</p>
   <img src="Tree-1-min.JPG" alt="green tree" width="800" height="600">
   <br></br>
-  <h4>Tree 2</h4>
+  <h4 id="Tree2">Tree 2</h4>
   <p>Yet another tree from my backyard.</p>
   <img src="Tree-2-min.JPG" alt="green tree2" width="800" height="600">
   <br></br>
-  <h4>Tree 3</h4>
+  <h4 id="Tree3">Tree 3</h4>
 <p>Yet ANOTHER tree from my backyard.</p>
 <img src="Tree-3-min.JPG" alt="green tree3" width="800" height="600">
   <br></br>
-  <h4>Tree 4</h4>
+  <h4 id="Tree4">Tree 4</h4>
 <p>Hey did you know all these pictures are the same two trees? And this is another one of those trees.</p>
 <img src="Tree-4-min.JPG" alt="green tree4" width="800" height="600">
