--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
   <h2>Tree Photos</h2>
-  <a href="Tree1">Go to tree 1</a>
+  <a id="Tree1">Go to tree 1</a>
   <a href="Tree2">Go to tree 2</a>
   <a href="Tree3">Go to tree 3</a>
   <a href="Tree4">Go to tree 4</a>
