--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,16 @@
 <br></br>
   <h2>Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
+  <br>
   <a href="#Tree2">Go to tree 2</a>
+  <br>
   <a href="#Tree3">Go to tree 3</a>
+  <br>
   <a href="#Tree4">Go to tree 4</a>
+  <br>
+  <a href="#Tree5">Go to tree 5</a>
+  <br>
+  <a href="#Tree6">Go to tree 6</a>
   <p>Some photos that I got of trees.</p>
   <h4 id="Tree1">Tree 1</h4>
   <p>This is a tree from my backyard.</p>
@@ -29,3 +36,18 @@
   <h4 id="Tree4">Tree 4</h4>
 <p>Hey did you know all these pictures are the same two trees? And this is another one of those trees.</p>
 <img src="Tree-4-min.JPG" alt="green tree4" width="800" height="600">
+  <br></br>
+  <h4 id="Tree5">Tree 5</h4>
+  <p>Another tree! Yay!</p>
+<img src="Tree-5-min.JPG" alt="green tree5" width="800" height="600">
+<br></br>
+<h4 id="Tree6">Tree 6</h4>
+  <p>This is the last tree photo, I swear.</p>
+  <br></br>
+
+
+
+
+
+
+</center>
