--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,7 @@
 <br></br>
 <h4 id="Tree6">Tree 6</h4>
   <p>This is the last tree photo, I swear.</p>
+  <img src="Tree-6-min.JPG" alt="green tree6" width="800" height="600">
   <br></br>
 
 
