--- a/index.htm
+++ b/index.htm
@@ -45,6 +45,10 @@
   <p>This is the last tree photo, I swear.</p>
   <img src="Tree-6-min.JPG" alt="green tree6" width="800" height="600">
   <br></br>
+  <h2>Bird photos.</h2>
+  
+  
+  
 
 
 
