--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
   <hr></hr>
-  <<h2>Tree Photos</h2>
+  <h2>Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
   <br>
   <a href="#Tree2">Go to tree 2</a>
@@ -67,6 +67,7 @@
   <br>
   <a href="#bird9">Bird picture 9</a>
   <br>
+  <h1>ksjkg</h1>
   <h4 id="Bird1>Bird 1</h4>
     <p>The first picture of a bird in a tree.</p>
     <img src="Bird-1-min.JPG" alt="green tree" width="800" height="600">
