--- a/index.htm
+++ b/index.htm
@@ -74,6 +74,10 @@
   <h4 id="bird2">Bird 2</h4>
     <p>The second picture of a bird in a tree.</p>
       <img src="Bird-2-min.JPG" alt="bird2" width="800" height="600">
+  <br></br>
+  <h4 id="bird3">Bird 3</h4>
+  <p>The third picture of a bird in a tree, yay!</p>
+  <img src="Bird-3-min.JPG" alt="bird3" width="800" height="600">
     
   
   
