--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,9 @@
   <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
+  <h1 id="Trees">Go to Tree photos.</h1>
   <hr></hr>
-  <h2>Tree Photos</h2>
+  <h2 id="Trees>Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
   <br>
   <a href="#Tree2">Go to tree 2</a>
