--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
   <hr></hr>
-  <h2 id="Trees>Tree Photos</h2>
+  <h2 id="Trees">Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
   <br>
   <a href="#Tree2">Go to tree 2</a>
