--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
-  <h1 id="#Trees">See My Tree Photos</h1>
+  <a href="#Tree1"><h1>See My Tree Photos.</h1></a>
   <hr></hr>
   <h2 id="Trees">Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
