--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
-  <a href="#Tree1"><h1>See My Tree Photos.</h1></a>
+  <a href="#Trees"><h1>See My Tree Photos.</h1></a>
   <hr></hr>
   <h2 id="Trees">Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
@@ -73,12 +73,19 @@
   <img src="Bird-1-min.JPG" alt="bird1" width="800" height="600">
   <br></br>
   <h4 id="bird2">Bird 2</h4>
-    <p>The second picture of a bird in a tree.</p>
+    <p>The second picture is of a bird in a tree.</p>
       <img src="Bird-2-min.JPG" alt="bird2" width="800" height="600">
   <br></br>
   <h4 id="bird3">Bird 3</h4>
   <p>The third picture of a bird in a tree, yay!</p>
   <img src="Bird-3-min.JPG" alt="bird3" width="800" height="600">
+  <br></br>
+  <h4 id="bird4">Bird 4</h4>
+  <p>I bet you would like this photo, it's another bird in a tree.</p>
+  <img src="Bird-4-min.JPG" alt="bird4" width="800" height="600">
+  
+  
+  
     
   
   
