--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
   <a href="#Trees"><h1>See My Tree Photos.</h1></a>
+  <a href="#Birdcool"><h1>See My Tree Photos.</h1></a>
   <hr></hr>
   <h2 id="Trees">Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
@@ -48,7 +49,7 @@
   <img src="Tree-6-min.JPG" alt="green tree6" width="800" height="600">
   <br></br>
  <hr></hr>
-     <h2>Bird photos.</h2>
+     <h2 id="Birdcool">Bird photos.</h2>
   <p>Pictures of birds in trees, and some other birds.</p>
   <a href="#bird1">Bird picture 1</a>
   <br>
@@ -83,7 +84,7 @@
   <h4 id="bird4">Bird 4</h4>
   <p>I bet you would like this photo, it's another bird in a tree.</p>
   <img src="Bird-4-min.JPG" alt="bird4" width="800" height="600">
-  
+  <br></br>
   
   
     
