--- a/index.htm
+++ b/index.htm
@@ -86,8 +86,13 @@
   <p>I bet you would like this photo, it's another bird in a tree.</p>
   <img src="Bird-4-min.JPG" alt="bird4" width="800" height="600">
   <br></br>
-  
-  
+  <h4 id="bird5">Bird 5</h4>
+  <p>Bird. </p>
+  <img src="Bird-5-min.JPG" alt="bird5" width="800" height="600">
+  <br></br>
+  <h4 id="bird6">Bird 6</h4>
+  <p>Birdy bird.</p>
+  <img src="Bird-6-min.JPG" alt="bird6" width="800" height="600">
     
   
   
