--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <br></br>
   <hr></hr>
   <a href="#Trees"><h1>See My Tree Photos.</h1></a>
-  <a href="#Birdcool"><h1>See My Tree Photos.</h1></a>
+  <a href="#Birdcool"><h1>See My Bird Photos.</h1></a>
   <hr></hr>
   <h2 id="Trees">Tree Photos</h2>
   <a href="#Tree1">Go to tree 1</a>
