--- a/index.htm
+++ b/index.htm
@@ -88,14 +88,20 @@
   <p>Birdy bird.</p>
   <img src="Bird-8-min.JPG" alt="bird8" width="800" height="600">
   <br></br>
-    
+  <hr></hr>
+  <h2 id="Planes">Plane Photos</h2>
+  <p>Pictures of planes in the air, more coming soon!</p>
+  <a href="#plane1">Plane Picture 1</a>
+  <br>
+  <a href="#plane2">Plane Picture 2</a>
+  <br>
+  <h4 id="plane1">Plane 1</h4>
+  <p>A plane in the air.</p>
   
   
   
-
-
-
-
+  
+  
 
 
 </center>
