--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">Dumbass this is the way to the homepage.</a>
 <br></br>
 <center>
-  <h1>Welcome to my photos page.</h1>
+  <h1 id="top">Welcome to my photos page.</h1>
   <img src="Trooper's_photos.gif" alt="classics" width="300" height="415">
 <p>This is the page where I host the photos I have taken of outside, they are cool.</p>
 <br></br>
@@ -97,11 +97,12 @@
   <br>
   <h4 id="plane1">Plane 1</h4>
   <p>A plane in the air.</p>
+  <img src="Plane-1-min.JPG" alt="plane1" width="800" height="600">
+  <br></br>
+  <h4 id="plane2">Plane 2</h4>
+  <p>Another plane flying in the air.</p>
+  <img src="Plane-2-min.JPG" alt="plane2" width="800" height="600">
+  <br></br>
+  <a href="#top"><h1>Go back to top.</h1></a>
   
-  
-  
-  
-  
-
-
-</center>
+  </center>
