--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color:#F0F8FF; font-family: Verdana;">
 <title>Trooper's Photos.</title>
-  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">Dumbass this is the way to the homepage.</a>
+  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">This is the way to the homepage.</a>
 <br></br>
 <center>
   <h1 id="top">Welcome to my photos page.</h1>
